<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">satriasayur1</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_100_kcal">100 kcal</string>
    <string name="msg_carrefour_graha">Carrefour Graha Raya</string>
    <string name="msg_masukkan_email">Masukkan email kamu disini</string>
    <string name="lbl_lemak">Lemak</string>
    <string name="msg_lihat_hasil_per">Lihat Hasil Periksa Sementara</string>
    <string name="msg_rekomendasi_die">Rekomendasi Diet Plan</string>
    <string name="lbl_diet">Diet </string>
    <string name="msg_jl_graha_raya">Jl. Graha Raya Bintaro, Pd. Jagung Tim., Kec. Serpong Utara, Kota Tangerang Selatan, Banten 15326</string>
    <string name="lbl_masuk">Masuk</string>
    <string name="msg_deteksi_gambar">Deteksi Gambar Ini</string>
    <string name="msg_lihat_lebih_ban">Lihat Lebih Banyak</string>
    <string name="lbl_diet_plan">Diet Plan</string>
    <string name="lbl_satriasayur">SatriaSayur</string>
    <string name="lbl_karbohidrat">Karbohidrat</string>
    <string name="msg_tujuan_diet_kes">Tujuan Diet Kesehatan</string>
    <string name="lbl_0_20_g">0.20 g</string>
    <string name="lbl_progres_saya">Progres Saya</string>
    <string name="msg_mulai_scan_sayu">Mulai scan sayuran dan buat diet plan untuk tracking data!</string>
    <string name="lbl_sayur">Sayur</string>
    <string name="msg_menaikkan_berat">Menaikkan Berat Badan</string>
    <string name="lbl_top">Top</string>
    <string name="lbl_makanan_kamu">Makanan Kamu</string>
    <string name="msg_rumus_bmi_ber">Rumus BMI : Berat(Kg)/Tinggi(M2) </string>
    <string name="lbl_meals">Meals</string>
    <string name="msg_kami_butuh_data">Kami butuh data diri kamu agar kami bisa membuat saran diet yang sesuai</string>
    <string name="lbl_3_14_gr">3.14 gr</string>
    <string name="msg_tempat_beli_say">Tempat Beli Sayur</string>
    <string name="msg_scan_dari_kamer">Scan Dari Kamera</string>
    <string name="lbl_hasil">Hasil </string>
    <string name="lbl_kalori">Kalori</string>
    <string name="lbl_atau">atau</string>
    <string name="msg_berikut_ini_mer">Berikut ini merupakan hasil analisa saran diet kami berdasarkan data yang kamu masukkan</string>
    <string name="msg_ini_hanya_rek">*(Ini hanya rekomendasi dari kami. Anda bebas menentukan)</string>
    <string name="lbl_hasil_deteksi">Hasil Deteksi</string>
    <string name="lbl_cah_kangkung">Cah Kangkung</string>
    <string name="lbl_180_cm">180 Cm</string>
    <string name="msg_gunakan_fitur_s">Gunakan fitur scan sayuran untuk mendeteksi jenis dan kandungan sayuran</string>
    <string name="msg_lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="msg_capaian_kalori">Capaian Kalori Hari Ini</string>
    <string name="msg_direkomendasika">Direkomendasikan</string>
    <string name="lbl_halo_testuser1">Halo, TestUser1</string>
    <string name="msg_lanjut_ke_menu">Lanjut ke Menu Utama</string>
    <string name="msg_melalui_sayuran"> melalui sayuran!</string>
    <string name="msg_cari_dimana_bel">Cari Dimana Beli Sayur Ini</string>
    <string name="msg_sudah_punya_aku">Sudah punya akun? Masuk disini</string>
    <string name="lbl_ke"> ke </string>
    <string name="msg_kangkung_belaca">Kangkung Belacan</string>
    <string name="lbl_protein">Protein</string>
    <string name="lbl_akun_saya">Akun Saya</string>
    <string name="lbl_kg">Kg</string>
    <string name="lbl_60_kg">60 Kg</string>
    <string name="lbl_deteksi">Deteksi</string>
    <string name="lbl_satria">Satria</string>
    <string name="msg_konfirmasi_kata">Konfirmasi Kata Sandi</string>
    <string name="msg_selamat_datang2">Selamat Datang Kembali!</string>
    <string name="msg_belum_punya_aku">Belum punya akun? Daftar disini</string>
    <string name="msg_selamat_datang3">Selamat datang kembali! Ayo mulai lagi perjalanan sehatmu bersama SatriaSayur! </string>
    <string name="msg_masukkan_kata_s">Masukkan kata sandi kamu disini</string>
    <string name="msg_daftar_dengan_g">Daftar dengan Google</string>
    <string name="lbl_19_kkal">19 kkal</string>
    <string name="lbl_cm">Cm</string>
    <string name="msg_deteksi_cari2">Deteksi, Cari, Buat, dan Awasi </string>
    <string name="lbl_0_2200_kkal">0 / 2200 kkal</string>
    <string name="lbl_cari_sayur">Cari Sayur</string>
    <string name="lbl_tanggal_lahir">Tanggal Lahir</string>
    <string name="lbl_3_14_g">3.14 g</string>
    <string name="msg_isi_data_diri_k">Isi Data Diri Kamu</string>
    <string name="lbl_19_kcal">19 kcal</string>
    <string name="lbl_pengaturan">Pengaturan</string>
    <string name="lbl_daftar_disini">Daftar disini</string>
    <string name="msg_plaza_bintaro_s">Plaza Bintaro Satoe, Plaza Bintaro satoe, Jl. Bintaro Utama I, RT.17/RW.8, Bintaro, Kec. Pesanggrahan, Kota Jakarta Selatan, Daerah Khusus .....</string>
    <string name="msg_ayo_mulai_perja">Ayo mulai perjalanan sehatmu bersama SatriaSayur! Dimulai dengan pembuatan akun kamu!</string>
    <string name="lbl_19_0">19.0</string>
    <string name="msg_daftarkan_diri">Daftarkan Diri Kamu!</string>
    <string name="lbl_55_mg">55 mg</string>
    <string name="lbl_jenis_kelamin">Jenis Kelamin</string>
    <string name="msg_menurunkan_bera">Menurunkan berat badan</string>
    <string name="lbl_scan_sayuran">Scan Sayuran</string>
    <string name="msg_masuk_dengan_go">Masuk dengan Google</string>
    <string name="msg_tulis_nama_leng">Tulis nama lengkap kamu disini</string>
    <string name="msg_menurukan_berat">Menurukan Berat Badan</string>
    <string name="lbl_berat_badan">Berat Badan</string>
    <string name="msg_tujuan_diet_pla">Tujuan Diet Plan</string>
    <string name="lbl_180">180</string>
    <string name="lbl_kata_sandi">Kata Sandi</string>
    <string name="lbl_mm_dd_yyyy">MM-DD-YYYY</string>
    <string name="lbl_mie_kangkung">Mie Kangkung</string>
    <string name="msg_belum_punya_aku2">Belum punya akun? </string>
    <string name="lbl_0_sayuran">0 sayuran</string>
    <string name="msg_super_indo_bint">Super Indo Bintaro</string>
    <string name="lbl_25_kcal">25 kcal</string>
    <string name="msg_bantu_membawamu">Bantu membawamu ke kehidupan sehat melalui sayuran!</string>
    <string name="msg_langkah_1_det">Langkah 1 : Deteksi Sayurnya</string>
    <string name="lbl_tempat_beli">Tempat Beli </string>
    <string name="lbl_asesmen">Asesmen </string>
    <string name="msg_resep_resep_yan2">Resep-resep Yang </string>
    <string name="lbl_index_bmi">Index BMI</string>
    <string name="msg_langkah_2_lih">Langkah 2 : Lihat Kandungannya</string>
    <string name="lbl_masuk_disini">Masuk disini</string>
    <string name="lbl_membawamu">membawamu</string>
    <string name="msg_resep_resep_yan">Resep-resep Yang Direkomendasikan</string>
    <string name="lbl_diri">Diri</string>
    <string name="lbl_sayuran">Sayuran</string>
    <string name="lbl_0_0_mg">0.0 mg</string>
    <string name="lbl">:</string>
    <string name="msg_laki_laki_per">Laki-Laki / Perempuan</string>
    <string name="msg_pasar_segar_gra">Pasar Segar Graha Jaya</string>
    <string name="lbl_kehidupan_sehat">kehidupan sehat</string>
    <string name="lbl_scan">Scan </string>
    <string name="msg_langkah_3_bik">Langkah 3 : Bikin Meal Plannya!</string>
    <string name="msg_jl_boulevard_g">Jl. Boulevard Graha Raya, Bintaro, Paku Jaya, Kec. Serpong Utara, Kota Tangerang Selatan, Banten 15324</string>
    <string name="lbl_email">Email</string>
    <string name="msg_hasil_periksa_s">Hasil Periksa Sementara</string>
    <string name="msg_sayuran_yang_di">Sayuran Yang Dideteksi Hari ini</string>
    <string name="lbl_dashboard">Dashboard</string>
    <string name="lbl_85">85</string>
    <string name="lbl_tujuan_diet">Tujuan Diet</string>
    <string name="lbl_sodium">Sodium</string>
    <string name="lbl_testuser1">TestUser1</string>
    <string name="msg_konfirmasi_kata2">Konfirmasi kata sandi kamu disini</string>
    <string name="msg_deteksi_cari">Deteksi, Cari, Buat, dan Awasi Makanan Kamu</string>
    <string name="lbl_plan">Plan</string>
    <string name="msg_upload_dari_gal">Upload Dari Galeri</string>
    <string name="lbl_buat_diet_plan">Buat Diet Plan</string>
    <string name="lbl_kangkung">Kangkung</string>
    <string name="lbl_tujuan_diet2">Tujuan Diet </string>
    <string name="lbl_hasil_gambar">Hasil Gambar</string>
    <string name="lbl_asesmen_diri">Asesmen Diri</string>
    <string name="lbl_75_kcal">75 kcal</string>
    <string name="lbl_gambar">Gambar</string>
    <string name="lbl_bantu">Bantu </string>
    <string name="lbl_nama_lengkap">Nama Lengkap</string>
    <string name="lbl_113_mg">113 mg</string>
    <string name="lbl_daftar">Daftar</string>
    <string name="msg_maaf_belum_ada">Maaf, belum ada Data yang bisa ditampilkan!</string>
    <string name="lbl_top_meals">Top Meals</string>
    <string name="msg_selamat_datang">Selamat Datang di</string>
    <string name="lbl_vitamin_c">Vitamin C</string>
    <string name="lbl_statistik">Statistik</string>
    <string name="lbl_kolesterol">Kolesterol</string>
    <string name="lbl_6600_iu">6600 IU</string>
    <string name="lbl_2_60_g">2.60 g</string>
    <string name="lbl_halo">Halo, </string>
    <string name="lbl_daftar_sekarang">Daftar Sekarang</string>
    <string name="lbl_vitamin_a">Vitamin A</string>
    <string name="msg_sudah_punya_aku2">Sudah punya akun? </string>
    <string name="lbl_tinggi_badan">Tinggi Badan</string>
    <string name="lbl_6300_iu">6300 IU</string>
    <string name="msg_please_enter_valid_pa">Please enter valid password</string>
    <string name="msg_please_enter_valid_email">Please enter valid email</string>
    <string name="msg_gambar_tidak_terseteksi_coba_ul_lagi">gambar tidak terseteksi coba ulangi lagi !</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
<string name="msg_permission_granted">Permission Granted</string>
<string name="msg_password_atau_usernamae_salah">password atau usernamae salah</string>
<string name="lbl_eror">Eror</string>
</resources>
