<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="dataDiriRowModel" type="com.satriasayur.app.modules.datadiri.data.model.DataDiriRowModel"/>
    </data>
    <LinearLayout android:gravity="start" android:id="@+id/linearColumn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" android:orientation="vertical">
        <TextView android:ellipsize="end"
            android:id="@+id/txtBeratBadan"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{dataDiriRowModel.txtBeratBadan}"
            style="@style/txtIntersemibold13" tools:text="@string/lbl_berat_badan"/>
        <LinearLayout android:gravity="end"
            android:id="@+id/linearRoweightyfive"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="wrap_content"
            android:orientation="horizontal" style="@style/groupStylewhite_A700cornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtEightyFive"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_13pxv"
                android:layout_marginStart="@dimen/_39pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_weight="0.48" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{dataDiriRowModel.txtEightyFive}"
                style="@style/txtIntersemibold12" tools:text="@string/lbl_85"/>
            <View android:background="@color/red_700"
                android:id="@+id/lineVectorFive"
                android:layout_height="@dimen/_42pxv"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_weight="0.03" android:layout_width="0dp"/>
            <TextView android:ellipsize="end" android:id="@+id/txtKg"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_weight="0.48" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{dataDiriRowModel.txtKg}"
                style="@style/txtIntersemibold12" tools:text="@string/lbl_kg"/>
        </LinearLayout>
    </LinearLayout>
</layout>
